--- a/css/estilos.css
+++ b/css/estilos.css
@@ -23,7 +23,7 @@ header {
 header a {
   text-decoration: none;
   color: black;
-  font-size: 42px;
+  font-size: 32px;
   letter-spacing: 0.5px;
 }
 header div {
@@ -32,7 +32,7 @@ header div {
   gap: 10%;
 }
 header div img {
-  width: 48px;
+  width: 38px;
 }
 header #guardados {
   font-size: 22px;
@@ -44,20 +44,64 @@ header #img-guardados {
 nav {
   box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.155);
   border-radius: 50px;
-  width: 16%;
-  padding: 1%;
-  padding-top: 0.5%;
-  padding-bottom: 0.5%;
+  min-width: 270px;
+  min-height: 45px;
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 4%;
 }
 nav a {
   color: white;
   background-color: #3300CC;
   font-size: 18px;
-  padding: 4%;
-  padding-left: 15%;
-  padding-right: 15%;
   border-radius: 50px;
+  min-width: 120px;
+  min-height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.centro {
+  border: 2px solid red;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.centro h1 {
+  color: #3300CC;
+  text-align: center;
+  max-width: 600px;
+  font-size: 32px;
+  font-weight: 100;
+}
+.centro p {
+  text-align: center;
+  max-width: 500px;
+  color: rgba(0, 0, 0, 0.659);
+}
+.centro .barra-busqueda {
+  border: 2px solid red;
+  min-width: 800px;
+  min-height: 50px;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  padding-inline: 20px;
+}
+.centro .barra-busqueda .filtro {
+  display: flex;
+  align-items: center;
+}
+.centro .barra-busqueda .filtro button {
+  background: none;
+  border: none;
+  max-width: 26px;
+  max-height: 26px;
+}
+.centro .barra-busqueda .filtro button img {
+  max-width: 26px;
+  max-height: 26px;
 }/*# sourceMappingURL=estilos.css.map */
