--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,12 +30,13 @@ header div {
   display: flex;
   align-items: center;
   gap: 10%;
+  width: 200px;
 }
 header div img {
   width: 38px;
 }
 header #guardados {
-  font-size: 22px;
+  font-size: 18px;
 }
 header #img-guardados {
   width: 26px;
@@ -49,12 +50,12 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 4%;
+  gap: 3%;
 }
 nav a {
   color: white;
   background-color: #3300CC;
-  font-size: 18px;
+  font-size: 14px;
   border-radius: 50px;
   min-width: 120px;
   min-height: 30px;
@@ -62,13 +63,19 @@ nav a {
   align-items: center;
   justify-content: center;
 }
+nav .pag-no-actual {
+  background: none;
+  color: black;
+}
 
 .centro {
-  border: 2px solid red;
   width: 100%;
+  min-height: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  gap: 35px;
 }
 .centro h1 {
   color: #3300CC;
@@ -83,25 +90,79 @@ nav a {
   color: rgba(0, 0, 0, 0.659);
 }
 .centro .barra-busqueda {
-  border: 2px solid red;
   min-width: 800px;
   min-height: 50px;
   border-radius: 50px;
+  box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.155);
   display: flex;
   align-items: center;
-  padding-inline: 20px;
 }
 .centro .barra-busqueda .filtro {
+  width: 180px;
+  border-right: 2px solid rgba(0, 0, 0, 0.257);
+  height: 50px;
+  padding-inline: 20px;
   display: flex;
   align-items: center;
+  gap: 15px;
+  cursor: pointer;
 }
 .centro .barra-busqueda .filtro button {
   background: none;
   border: none;
-  max-width: 26px;
-  max-height: 26px;
+  padding: 0;
+  cursor: pointer;
 }
 .centro .barra-busqueda .filtro button img {
-  max-width: 26px;
-  max-height: 26px;
+  max-width: 20px;
+  max-height: 20px;
+}
+.centro .barra-busqueda .input-busqueda {
+  width: 100%;
+  margin-inline: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.centro .barra-busqueda .input-busqueda input {
+  margin-left: 15px;
+  width: 300px;
+  height: 30px;
+  border: none;
+  outline: none;
+}
+.centro .barra-busqueda .input-busqueda button {
+  background-color: #3300CC;
+  border: none;
+  width: 100px;
+  border-radius: 50px;
+  padding: 5px;
+  padding-inline: 0;
+  cursor: pointer;
+}
+.centro .barra-busqueda .input-busqueda button img {
+  max-width: 22px;
+}
+.centro .accesos-rapidos {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+.centro .accesos-rapidos .acceso {
+  width: 100px;
+  height: 80px;
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.302);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.centro .accesos-rapidos .acceso img {
+  width: 32px;
+}
+.centro .accesos-rapidos .acceso span {
+  font-size: 14px;
 }/*# sourceMappingURL=estilos.css.map */
