--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,13 +16,14 @@ body {
 
 header {
   width: 100%;
-  padding: 2%;
+  padding: 0.8%;
   display: flex;
   justify-content: space-around;
+  position: absolute;
 }
 header a {
   text-decoration: none;
-  color: black;
+  color: white;
   font-size: 32px;
   letter-spacing: 0.5px;
 }
@@ -51,6 +52,7 @@ nav {
   justify-content: center;
   align-items: center;
   gap: 3%;
+  background-color: white;
 }
 nav a {
   color: white;
@@ -76,18 +78,22 @@ nav .pag-no-actual {
   align-items: center;
   justify-content: center;
   gap: 35px;
+  background: 0 250%/cover url("../img/cielo.jpg") no-repeat;
+  background-attachment: fixed;
 }
 .centro h1 {
-  color: #3300CC;
+  margin-top: 50px;
+  color: white;
   text-align: center;
   max-width: 600px;
   font-size: 32px;
-  font-weight: 100;
+  font-weight: 600;
 }
 .centro p {
   text-align: center;
-  max-width: 500px;
-  color: rgba(0, 0, 0, 0.659);
+  max-width: 600px;
+  color: black;
+  display: none;
 }
 .centro .barra-busqueda {
   min-width: 800px;
@@ -96,6 +102,7 @@ nav .pag-no-actual {
   box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.155);
   display: flex;
   align-items: center;
+  background-color: white;
 }
 .centro .barra-busqueda .filtro {
   width: 180px;
@@ -150,6 +157,7 @@ nav .pag-no-actual {
   gap: 20px;
 }
 .centro .accesos-rapidos .acceso {
+  background-color: white;
   width: 100px;
   height: 80px;
   border-radius: 10px;
