--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -96,7 +96,7 @@ nav {
 // ============ Central: Título, descripción, barra de búsqueda y accesos rápidos ==============
 .centro {
     width: 100%;
-    min-height: 400px;
+    min-height: 600px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -112,6 +112,7 @@ nav {
         max-width: 600px;
         font-size: 32px;
         font-weight: 600;
+        letter-spacing: 1px;
     }
 
     p {
@@ -212,5 +213,71 @@ nav {
                 font-size: 14px;
             }
         }
+    }
+}
+
+
+// ============================  GALERÍA  =================================
+
+.content-galeria {
+    padding-inline: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .titulo {
+        margin-top: 50px;
+        box-shadow: $sombraPrinc;
+        border-radius: 50px;
+        width: 300px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .galeria {
+        margin-top: 50px;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        justify-content: center;
+        gap: 1%;
+
+        div {
+            width: 300px;
+            height: 350px;
+            img {
+                width: 300px;
+                height: 350px;
+                border-radius: 10px;    
+            }
+        }
+
+        h1 {
+            display: flex;
+            padding-left: 20px;
+            align-items: center;
+            font-size: 22px;
+        }
+    }
+}
+
+
+// ============================  FOOTER  =================================
+
+footer {
+    margin-top: 100px;
+    width: 100%;
+    height: 60px;
+    background: 0 40%/cover url("../img/cielo.jpg") no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    h1 {
+        font-size: 20px;
+        color: white;
+        letter-spacing: 1px;
+        font-weight: 100;
     }
 }
