--- a/css/estilos.css
+++ b/css/estilos.css
@@ -175,18 +175,35 @@ nav .pag-no-actual {
   flex-direction: column;
   align-items: center;
 }
-.content-galeria .titulo {
-  margin-top: 4%;
-  width: 250px;
-  height: 50px;
+.content-galeria .cabecera-galeria {
+  margin-top: 5%;
+  padding: 1%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1%;
+}
+.content-galeria .cabecera-galeria .titulo-galeria {
+  box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.155);
+  width: 450px;
+  height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
 }
-.content-galeria p {
-  text-align: center;
-  max-width: 600px;
+.content-galeria .cabecera-galeria .titulo-galeria h1 {
   color: black;
+}
+.content-galeria .cabecera-galeria .text-galeria {
+  height: 80px;
+  box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.155);
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  display: flex;
+  align-items: center;
+  padding: 2%;
 }
 .content-galeria .galeria {
   margin-top: 50px;
@@ -199,13 +216,13 @@ nav .pag-no-actual {
   width: 300px;
   height: 350px;
 }
-.content-galeria .galeria div img {
+.content-galeria .galeria div img, .content-galeria .galeria div video {
   width: 300px;
   height: 350px;
   border-radius: 10px;
 }
 .content-galeria .galeria .frases {
-  background-color: rgba(128, 128, 128, 0.108);
+  background: url("../img/frases.png");
   border-radius: 10px;
   padding: 10%;
   display: flex;
@@ -227,7 +244,7 @@ footer {
   justify-content: center;
 }
 footer h1 {
-  font-size: 20px;
+  font-size: 16px;
   color: white;
   letter-spacing: 1px;
   font-weight: 100;
