--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -93,7 +93,6 @@ nav {
     }
 }
 
-
 // ============ Central: Título, descripción, barra de búsqueda y accesos rápidos ==============
 .centro {
     width: 100%;
@@ -218,20 +217,38 @@ nav {
     flex-direction: column;
     align-items: center;
 
-    .titulo {
-        margin-top: 4%;
-        width: 250px;
-        height: 50px;
-        // font-size: 18px;
+    .cabecera-galeria {
+        margin-top: 5%;
+        padding: 1%;
         display: flex;
-        justify-content: center;
         align-items: center;
-    }
+        justify-content: center;
+        gap: 1%;
 
-    p {
-        text-align: center;
-        max-width: 600px;
-        color: black;
+        .titulo-galeria {
+            box-shadow: $sombraPrinc;
+            width: 450px;
+            height: 80px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-top-left-radius: 15px;
+            border-bottom-left-radius: 15px;
+
+            h1 {
+                color: $textOscuro;
+            }
+        }
+
+        .text-galeria {
+            height: 80px;
+            box-shadow: $sombraPrinc;
+            border-top-right-radius: 15px;
+            border-bottom-right-radius: 15px;
+            display: flex;
+            align-items: center;
+            padding: 2%;
+        }
     }
 
     .galeria {
@@ -244,7 +261,8 @@ nav {
         div {
             width: 300px;
             height: 350px;
-            img {
+
+            img, video {
                 width: 300px;
                 height: 350px;
                 border-radius: 10px;    
@@ -252,7 +270,7 @@ nav {
         }
 
         .frases {
-            background-color: rgba(128, 128, 128, 0.108);
+            background: url("../img/frases.png");
             border-radius: 10px;
             padding: 10%;
             display: flex;
@@ -260,6 +278,7 @@ nav {
 
             p {
                 font-family: $fuentePrincipal;
+                // color: $textClaro;
                 display: flex;
                 align-items: center;
             }
@@ -280,7 +299,7 @@ footer {
     justify-content: center;
 
     h1 {
-        font-size: 20px;
+        font-size: 16px;
         color: white;
         letter-spacing: 1px;
         font-weight: 100;
