Implementada barra de búsqueda para ambas secciones. Se muestran mensajes para las búsquedas inválidas y para las "no coinciendias" con ningún recurso.

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -224,7 +224,7 @@ nav .pag-no-actual {
   display: flex;
   flex-direction: column;
 }
-.content-galeria .galeria div .foto, .content-galeria .galeria div video {
+.content-galeria .galeria div .foto, .content-galeria .galeria div .video {
   width: 300px;
   height: 350px;
   -o-object-fit: cover;
