--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -274,7 +274,7 @@ nav {
             display: flex;
             flex-direction: column;
 
-            .foto, video{
+            .foto, .video{
                 width: 300px;
                 height: 350px;
                 object-fit: cover;
