--- a/css/estilos.css
+++ b/css/estilos.css
@@ -121,6 +121,9 @@ nav .pag-no-actual {
 .centro .barra-busqueda .input-busqueda {
   width: 100%;
   margin-inline: 10px;
+}
+.centro .barra-busqueda .input-busqueda form {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
