Se implementaron los accesos rápidos para ambas páginas y se reorganizaron los eventos principales en una sola función llamada gestorEventos.

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -176,6 +176,10 @@ nav .pag-no-actual {
 .centro .accesos-rapidos .acceso span {
   font-size: 14px;
 }
+.centro .accesos-rapidos .acceso:hover {
+  cursor: pointer;
+  scale: 1.01;
+}
 
 .content-galeria {
   padding-inline: 20%;
