--- a/css/estilos.css
+++ b/css/estilos.css
@@ -102,21 +102,21 @@ nav .pag-no-actual {
   width: 180px;
   border-right: 2px solid rgba(0, 0, 0, 0.257);
   height: 50px;
-  padding-inline: 20px;
   display: flex;
   align-items: center;
-  gap: 15px;
-  cursor: pointer;
 }
-.centro .barra-busqueda .filtro button {
-  background: none;
+.centro .barra-busqueda .filtro .selector-filtro {
+  outline: none;
+  font-family: Manjari;
+  padding-left: 50px;
+  cursor: pointer;
   border: none;
-  padding: 0;
-  cursor: pointer;
-}
-.centro .barra-busqueda .filtro button img {
-  max-width: 20px;
-  max-height: 20px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  width: 100%;
+  height: 100%;
+  background: url("../img/ajustes.png") no-repeat 15% center/18px;
 }
 .centro .barra-busqueda .input-busqueda {
   width: 100%;
