--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -293,7 +293,7 @@ nav {
             .accion {
                 padding: 5%;
 
-                button {
+                a, button {
                     opacity: 0.8;
                     visibility: hidden;
                     border: none;
